--- a/index.html
+++ b/index.html
@@ -1,5 +1,32 @@
-index.html
 
-<h1>Sample index.html file </h1>
+
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Free Learning: Web Applications</title>
+  <meta name="fgcims" content="Web Application Development">
+  <meta name="fgcimsteam" content="FgcIms">
+
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
+</head>
+
+<body>
+  <script src="js/scripts.js"></script>
+
+    <h3>Welcome to FgcIms - Free Learning on Development of Dynamic Web Applications Using LAMP (PHP for now).</h3>
+
+    <ul>
+
+        <h4><li><a href='laptops4sale.html'>Laptops for Sale</li></h4>
+        <h4><li><a href='desktops4sale.html'>Desktops for Sale</li></h4>
+
+    </ul>
+
+</body>
+</html>
 
 
