--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <body>
   <script src="js/scripts.js"></script>
 
-    <h3>Welcome to FgcIms - Free Learning on Development of Dynamic Web Applications Using LAMP (PHP for now).</h3>
+    <h3>Welcome to FgcIms - Free Learning on Development of Dynamic Web Applications Using LAMP (PHP for now)</h3>
+
+    <h4>Example Output of Web Application Currently Under Development</4>
 
     <ul>
-
         <h4><li><a href='laptops4sale.html'>Laptops for Sale</li></h4>
         <h4><li><a href='desktops4sale.html'>Desktops for Sale</li></h4>
-
     </ul>
 
 </body>
