--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
 <body>
   <script src="js/scripts.js"></script>
 
-    <h3>Welcome to FgcIms - Free Learning on Development of Dynamic Web Applications Using LAMP (PHP for now)</h3>
+    <h1>This is TEST webpage</h1>
 
-    <h4>Example Output of Web Application Currently Under Development</4>
+    <h2>Welcome to FgcIms - Free Learning on Development of Dynamic Web Applications Using LAMP</h2> 
+    <strong>(Using PHP for now, Python next, Java next, Swift next, C# next, ... next, and mostly open source softwares)</strong>
+
+    <h3>Refurbished computers go through the process of intake, triage, build, quality check, inventory, sales, and scrapping</h3>
+
+    <h4>Below Are Example Outputs of the Web Application Currently Under Development</4>
 
     <ul>
         <h4><li><a href='laptops4sale.html'>Laptops for Sale</li></h4>
