--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body>
   <script src="js/scripts.js"></script>
 
-    <h1>This is TEST webpage</h1>
+    <h1>This is a TEST webpage on a TEST website</h1>
 
     <h2>Welcome to FgcIms - Free Learning on Development of Dynamic Web Applications Using LAMP</h2> 
-    <strong>(Using PHP for now, Python next, Java next, Swift next, C# next, ... next, and mostly open source softwares)</strong>
+    <strong>(Using PHP for now, Python next, Java next, Swift next, C# next, ... next, and mostly with open source software)</strong>
 
     <h3>Refurbished computers go through the process of intake, triage, build, quality check, inventory, sales, and scrapping</h3>
 
