--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
 
   <title>Free Learning: Web Applications</title>
-  <meta name="fgcims" content="Web Application Development">
+  <meta name="fgcims" content="Real-Life Development of Dynamic Web Applications">
   <meta name="fgcimsteam" content="FgcIms">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
@@ -17,18 +17,16 @@
 <body>
   <script src="js/scripts.js"></script>
 
-    <h1>This is a TEST webpage on a TEST website</h1>
+    <h1>This is a TEST webpage on a TEST website.</h1>
 
-    <h2>Welcome to FgcIms - Free Learning on Development of Dynamic Web Applications Using LAMP</h2> 
-    <strong>(Using PHP for now, Python next, Java next, Swift next, C# next, ... next, and mostly with open source software)</strong>
+    <h2>Welcome to FGC, a non-profit for Free Learning on Real Life Development of Dynamic Web Applications Using LAMP, with PHP and open-source software.</h2> 
+    <h3>The web applications streamline the procedures in refurbishing computers and associated items, which go through the process of intake, triage, build, quality check, inventory, sales, scrapping/recycling, and financial accounting.  This is supported by a time management system which keeps track of volunteer orientation, training, activities done and certificates, contributed hours, and earned/redeemed reward points.  Future modules will include monitoring of free classes on introduction to computers, programming languages, etc.</h3>
 
-    <h3>Refurbished computers go through the process of intake, triage, build, quality check, inventory, sales, and scrapping</h3>
-
-    <h4>Below Are Example Outputs of the Web Application Currently Under Development</4>
+    <h4>Below Are Example Output of the Web Application Currently Under Development:</4>
 
     <ul>
-        <h4><li><a href='laptops4sale.html'>Laptops for Sale</li></h4>
-        <h4><li><a href='desktops4sale.html'>Desktops for Sale</li></h4>
+        <h1><li><a href='laptops4sale.html'>Laptops for Sale</li></h1>
+        <h1><li><a href='desktops4sale.html'>Desktops for Sale</li></h1>
     </ul>
 
 </body>
